Adding missing properties to yaml
